...
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/editText"
        android:layout_toEndOf="@+id/editText"
        android:layout_marginLeft="177dp"
        android:layout_marginStart="177dp"
        android:layout_marginBottom="115dp"
        android:id="@+id/button2"/>


</RelativeLayout>

